--- a/src/main/resources/templates/conference/create.html
+++ b/src/main/resources/templates/conference/create.html
@@ -17,6 +17,11 @@
                     <h4 class="mb-0">Create New Conference</h4>
                 </div>
                 <div class="card-body p-4">
+                    <div th:if="${errorMessage}" class="alert alert-danger alert-dismissible fade show mb-4">
+                        <i class="bi bi-exclamation-triangle-fill me-2"></i>
+                        <span th:text="${errorMessage}">Error message goes here</span>
+                        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                    </div>
                     
                     <form th:action="@{/conferences/save}" th:object="${conference}" method="post">
                         
@@ -47,7 +52,7 @@
                         </div>
 
                         <div class="d-grid gap-2 d-md-flex justify-content-md-end mt-4">
-                            <a th:href="@{/conferences/list}" class="btn btn-secondary me-md-2">Cancel</a>
+                            <a th:href="@{/conferences}" class="btn btn-secondary me-md-2">Cancel</a>
                             <button type="submit" class="btn btn-success px-4">Create Conference</button>
                         </div>
 
